feat: 加入打包jre/lib/執行檔為zip